name:                wyas
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

license:             MIT
license-file:        LICENSE

author:              Simon Friis Vindum
maintainer:          simonfv@gmail.com
-- copyright:           
category:            Language
build-type:          Simple

-- extra-source-files:  
cabal-version:       >=1.10

executable wyas
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
                     , parsec >= 3.1.7 && <3.2
  -- hs-source-dirs:      
  -- Base language which the package is written in.
  default-language:    Haskell2010
  